--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-router/serve": "^7.9.2",
     "clsx": "^2.1.1",
     "isbot": "^5.1.31",
-    "pdfjs-dist": "^5.4.296",
+    "pdfjs-dist": "4.4.168",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
@@ -25,6 +25,7 @@
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "tailwindcss": "^4.1.13",
