--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
